2008-04-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc:         Fixed stubs usage
	* library/ttk/xpTheme.tcl: fix the colour of labelframe in xp

2008-04-02  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tk.decls:	remove 'export' declarations of symbols now
				only in libtkstub and no longer in libtk.

	* generic/tkStubLib.c:	make symbols in libtkstub.a MODULE_SCOPE to
				avoid exporting them from libraries that link
				with -ltkstub; constify tk*StubsPtr and stub
				table hook pointers. [Bug 1819422]

	* generic/tkStubLib.c:		undef USE_TCL_STUBS before defining it
	* generic/ttk/ttkStubLib.c:	unconditionally; remove needless #ifdef

	* generic/tkDecls.h:		make genstubs
	* generic/tkIntDecls.h:
	* generic/tkIntPlatDecls.h:
	* generic/tkIntXlibDecls.h:
	* generic/tkPlatDecls.h:
	* generic/tkStubInit.c:

	* unix/configure.in (Darwin):	remove now unnecessary unexporting
					of libtclstub symbols from libtk.

	* unix/configure:		autoconf-2.59

2008-04-01  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkStubLib.c (Tk_InitStubs):	Added missing error message and
	* generic/tkWindow.c (Tk_PkgInitStubsCheck):	removed needless #ifdef
	complexity.

	* generic/tkWindow.c:	Revised package initialization so that 
	* unix/Makefile.in:	"tkStubsPtr" is not present in libtk.so, but
	* win/Makefile.in:	is present only in libtkstub.a.  This tightens
	* win/makefile.bc:	up the rules for users of the stubs interfaces.
	* win/makefile.vc:	[Tcl Bug 1819422].

	* README:		Bump version number to 8.6a0
	* generic/tk.h:
	* library/tk.tcl:
	* macosx/Wish-Common.xcconfig:
	* unix/configure.in:
	* unix/tk.spec:
	* win/README:
	* win/configure.in:
	* win/tcl.m4:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* generic/tkConsole.c:	Relax Tcl_InitStubs() calls so that a Tk 8.6
	* generic/tkMain.c:	might [load] into a Tcl 8.5 interp.
	* generic/tkWindow.c:

	* generic/tkDecls.h:		make genstubs
	* generic/tkIntDecls.h:
	* generic/tkIntPlatDecls.h: